<resources>
    <string name="app_name">Kumandra</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="logout">Logout</string>
    <string name="error_pas">Minimum Password Length is 8</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="look_map">Look Map</string>
    <string name="tabText1">Seluruh Laporan</string>
    <string name="tabText2">Laporan Saya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tanggal_dibuat">Tanggal Dibuat</string>
    <string name="tanggal_update">Tanggal Update</string>
    <string name="email">Email</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lokasi_kelas">Lokasi</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">Notifikasi</string>
    <string name="filter_status">Filter Status</string>
    <string name="status_laporan_baru">Status Laporan Baru</string>
    <string name="status_sedang_diproses">Status Sedang Diproses</string>
    <string name="status_ditolak">Status Ditolak</string>
    <string name="status_selesai">Status Selesai</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Kirim</string>
    <string name="status_laporan">Status Laporan</string>
    <string name="pilih_gedung_kuliah">Pilih Gedung Kuliah</string>
    <string name="pilih_ruang_kelas">Pilih Ruang Kelas</string>
    <string name="pilih_fasilitas">Pilih Fasilitas</string>
    <string name="respon_dari_pj">Respon dari PJ</string>
    <string name="back">back</string>
    <string name="title_app">Layanan Pelaporan Kerusakan Fasilitas di Gedung Perkuliahan</string>
    <string name="universitas_andalas">UNIVERSITAS ANDALAS</string>
    <string name="sudah_punya_akun">Sudah punya akun</string>
    <string name="add_report">ADD REPORT</string>
    <string name="seluruh_laporan">Seluruh Laporan</string>
    <string name="semoga_perkuliahan_menyenangkan">Semoga Perkuliahanmu Menyenangkan</string>
    <string name="laporan">Laporan</string>
    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="selesai">Selesai</string>
    <string name="ditolak">Ditolak</string>
    <string name="sedang_diproses">Sedang Diproses</string>
    <string name="laporan_baru">Laporan Baru</string>
    <string name="status">Status</string>
    <string name="level_report">Level Laporan</string>
    <string name="respon_pj">Respon PJ</string>
</resources>