<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_backgroundContainer"
        android:layout_width="457dp"
        android:layout_height="659dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/background_info_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail"
        android:layout_marginTop="20dp">
        <TableRow>
            <TextView
                android:id="@+id/tv_labelCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/tanggal_dibuat"/>

            <TextView
                android:id="@+id/tv_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_labelUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/tanggal_update"/>

            <TextView
                android:id="@+id/tv_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_labelClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/lokasi_kelas"/>

            <TextView
                android:id="@+id/tv_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_labelFacil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/fasilitas"/>

            <TextView
                android:id="@+id/tv_facil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_labelDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/deskripsi"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_labelStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/status_laporan"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="value"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/bt_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/respon"
        android:textSize="20sp"/>



<!--    <TextView-->
<!--        android:id="@+id/tv_tanggalDetail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:textSize="17sp"-->
<!--        android:backgroundTint="@color/pastel"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi"-->
<!--        tools:text="name"/>-->



</androidx.constraintlayout.widget.ConstraintLayout>