<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:background="@color/third_purple">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="230dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        tools:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/tv_halo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_app"
        android:textSize="25sp"
        android:textColor="@color/blackgrey"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/universitas_andalas"
        android:textColor="@color/blackgrey"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_halo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="18dp"
        android:alpha="0"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:hintEnabled="true"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nama"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:passwordToggleEnabled = "true"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp">
        <com.example.kumandra.ui.customview.PasswordET
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:passwordToggleEnabled = "true"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp">
        <com.example.kumandra.ui.customview.PasswordET
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Konfirmasi Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_regis"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="DAFTAR"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/main_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password"/>

    <TextView
        android:id="@+id/tv_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/blackgrey"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_regis"/>

    <ProgressBar
        android:id="@+id/pb_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>